* adding a table to the manual to give the TMAP version for each Torrent Suite version

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -58,7 +58,7 @@ urlcolor=myurlcolor     % color of external links
 % DATE
 \author{Nils Homer}
 \date{}
-\title{TMAP: the flow sequence mapping program
+\title{TMAP: the torrent mapping program
 \thanks{Copyright \copyright 2010-2011 Ion Torrent Systems, Inc. All Rights, made for TMAP version \Version}
 }
 \begin{document}
@@ -112,6 +112,27 @@ TMAP is implemented as a command-line program.
 It accepts many command-line options to customize and tune the mapping algorithm.
 The key commands are organized into one binary program called \TT{tmap}.
 To access each command, we use \TT{tmap <name>}, where \TT{<name>} is the name of the command we wish to execute.
+
+\section{Officially Supported Versions}
+The latest TMAP is unsupported.  
+To use a supported version, please see the TMAP version associated with a Torrent Suite release in \autoref{tab:tmap2TS}
+\begin{table}
+	\begin{tabular}{|l|>{\small}l|}
+		\hline
+		Torrent Suite 2.2 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.3.7} \\ \hline
+		Torrent Suite 2.0.1 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.2.3} \\ \hline
+		Torrent Suite 2.0 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.2.3} \\ \hline
+		Torrent Suite 1.5.1 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.1.3} \\ \hline
+		Torrent Suite 1.5 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.1.3} \\ \hline
+		Torrent Suite 1.4.1 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.0.28} \\ \hline
+		Torrent Suite 1.4 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.0.25} \\ \hline
+		Torrent Suite 1.3 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.0.19} \\ \hline
+		Torrent Suite 1.2 & \url{http://github.com/iontorrent/TMAP/tarball/tmap.0.0.9} \\ \hline
+		Latest TMAP & \url{http://github.com/iontorrent/TMAP/tags} \\ \hline
+	\end{tabular}
+	\caption{TMAP versions associated with Torrent Suite versions}
+	\label{tab:tmap2TS}
+\end{table}
 
 \section{Common Mapping Options}
 \label{sec:commonoptions}
