--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -242,6 +242,9 @@ Specifies the input reads are to be annotated as bidirectional using the XB SAM 
 \subsubsection{\TT{-I,--use-seq-equal}}
 Specifies to use the '=' symbol in the SEQ field.
 
+\subsubsection{\TT{-u,--rand-read-name}}
+Specifies to randomize based on the read name.
+
 \subsubsection{\TT{-C,--ignore-rg-from-sam}}
 Specifies to do not use the RG header and RG record tags in the SAM file (if the input file is a SAM file, and SAM input files are enabled).
 
