* adding a comment about indel justification with long indel detection

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -960,6 +960,7 @@ Given Ion Torrent data, the latter may be more faithful to the underlying error 
 Another feature is the \TT{-G} and \TT{-K} options.
 When indels are detected using this method, the score for the indel is given by \TT{-G}.
 Since this is applied after the above alignment, typically only long gaps are given this score.
+Indels may not be justified in this case.
 
 \section{How are multiple equally scoring alignments in the same region chosen?}
 
