--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -271,6 +271,19 @@ Specifies the output type:
 	\item BAM (uncompressed). This is equivalent of using \TT{-o 0} and piping the output into \TT{samtools view -Su -}.
 \end{enumerate}
 
+\subsubsection{\TT{--end-repair}}
+Specifies to perform end repair.
+\begin{enumerate}
+	\setcounter{enumi}{-1} % start at zero
+	\item Disable.
+	\item Prefer mismatches (when breaking ties).
+	\item Prefer indels (when breaking ties).
+\end{enumerate}
+The basic algorithm is to examine each alignment for a stretch of match/mismatches at the 5' end of the read with at least one mismatch.
+We then perform a new Smith-Waterman alignment on a prefix of the read (beginning/5'-end) where we set the gap open penalty is set to zero, the gap extension penalty is set to the previous mismatch penalty, and the mismatch penalty is set to effectively infinity.
+
+This solves a problem where mismatches can be over-represented at the 5' end of the read when no 5' soft-clipping is performed, and there is a more likely (homopolymer error) explanation.
+
 \subsubsection{\TT{-k,--shared-memory-key INT}}
 Specifies the shared memory key if the reference index has been loaded into shared memory.
 
