--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -533,6 +533,9 @@ Specifies the maximum seeding interval size for extending a mapping.
 \subsubsection{\TT{--narrow-rmdup}}
 Specifies to remove duplicate seeds for narrow suffix array.
 
+\subsubsection{\TT{--max-chain-gap INT}}
+Specifies the maximum gap size during chaining.
+
 \section{tmap map3}
 \label{sec:map3}
 The \BF{map3} is a command to map sequences to a reference genome.
