* missing stage1 in the manual

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -667,7 +667,7 @@ It is possible to have the same algorithm run in two different stages.
 The recommended values are pre-set, and the following command line is recommended:
 \begin{verbatim}
 tmap mapall -f <in.fasta> -r <in.fastq> -n <num.threads> -v 
-map1 map2 map3 > <out.sam>
+stage1 map1 map2 map3 > <out.sam>
 \end{verbatim}
 
 \subsection{Usage}
